Fix width on smallest view, don't change header size on resize

--- a/app/shared-components/ForgotPassword/ForgotPassword.scss
+++ b/app/shared-components/ForgotPassword/ForgotPassword.scss
@@ -37,9 +37,12 @@
 		margin: 40px auto;
 	}
 	.ForgotPasswordForm {
-		width: 456px;
+		width: 420px;
 	}
-	input#ForgotPasswordMessage {
+	#ForgotPasswordMessage {
+		font-size: 1.25rem;
+	}
+	#ForgotPasswordEmail {
 		// Foundation Overrides
 		border: 1px solid #c8c7c2;
 		border-radius: 0;
